--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: ui
-description: "A new Flutter project."
+name: CTE
+description: " CTE project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' 
@@ -22,13 +22,26 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
-  flutter_slimy_card: ^1.0.2
+  
   get: ^4.6.6
+  google_fonts: ^6.2.1
+  web_pointer: ^1.1.4
+  firebase_core: ^2.32.0
+  getwidget: ^4.0.0
+  url_launcher: ^6.3.0
+  share_plus: ^10.0.0
+  
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.13.1
+    
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/cte_icon2.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -42,6 +55,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+ 
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
@@ -50,16 +64,12 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    
-    - images/3.png
-    - images/4.png
-    - images/5.png
-    - images/6.png
-    - images/7.png
-    - images/8.png
-    - images/9.png
-    - images/about.jpg
 
+    - assets/
+
+
+    
+   
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -73,10 +83,7 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+   #
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
